<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dark"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout 
           android:orientation="horizontal"
           android:layout_width="fill_parent"
           android:layout_height="wrap_content"
           android:weightSum="1.0">

           <TextView
               android:id="@+id/walletTitle"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:gravity="center_horizontal"
               android:text="@string/currentTicketTitle"
               android:textColor="@color/white1"
               android:textSize="18sp"
               android:paddingTop="18dip" />

       </LinearLayout>
    
    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dip"
        android:background="@drawable/current_ticket_bg"
        android:layout_gravity="center"
        android:orientation="vertical" >
           
        <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">
            
            <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/img_desc"
            android:gravity="center_horizontal"
            android:src="@drawable/bus_icon" />
        </LinearLayout>

        
		<LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="30dip">
            
		    <TextView
            android:id="@+id/currentTicketTypeLabel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            
            android:gravity="center"
            android:text="@string/currentTicketType"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:layout_weight="0.5" />
		    
		    <TextView
            android:id="@+id/currentTicketTypeContent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="Placeholder"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:layout_weight="0.5" />
            
        </LinearLayout>
        
		<LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="20dip">
            
		    <TextView
            android:id="@+id/currentTicketValidatedLabel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            
            android:gravity="center"
            android:text="@string/currentTicketValidation"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:layout_weight="0.5" />
		    
		    <TextView
            android:id="@+id/currentTicketValidationContent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="Placeholder"
            android:textColor="#FFFFFF"
            android:layout_weight="0.5" />
            
        </LinearLayout>
        
		<LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            android:layout_marginTop="20dip">
            
		    <TextView
            android:id="@+id/currentTicketRemainingLabel"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            
            android:gravity="center"
            android:text="@string/currentTicketRemaining"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF"
            android:layout_weight="0.5" />
		    
		    <TextView
            android:id="@+id/currentTicketRemainingContent"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="Placeholder"
            android:textColor="#FFFFFF"
            android:layout_weight="0.5" />
            
        </LinearLayout>
        
        
    </LinearLayout>
    
</LinearLayout>