<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ticket="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sdfsdfsadfasd"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#2b2b2b"
    android:orientation="horizontal" >

    <LinearLayout
        android:id="@+id/mainmenuLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:background="#2b2b2b"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1.0" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/title"
                android:textColor="@color/white1"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/asdasdas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:layout_marginTop="20dip"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <pt.fe.up.cmov.busticket.client.MainBtn
                    android:id="@+id/Button01"
                    android:layout_width="0dip"
                    android:layout_height="125dip"
                    android:layout_weight="1"
                    android:background="@drawable/main_menu_buttons_top"
                    android:textStyle="bold"
                    ticket:img="@drawable/credit7"
                    ticket:title="@string/buy_tickets_main" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <pt.fe.up.cmov.busticket.client.MainBtn
                    android:id="@+id/Button04"
                    android:layout_width="match_parent"
                    android:layout_height="125dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/main_menu_buttons_middle"
                    android:textStyle="bold"
                    ticket:img="@drawable/open23"
                    ticket:title="@string/validate_ticket_main" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dip"
                android:layout_marginRight="25dip"
                android:orientation="horizontal"
                android:weightSum="1.0" >

                <pt.fe.up.cmov.busticket.client.MainBtn
                    android:id="@+id/Button05"
                    android:layout_width="match_parent"
                    android:layout_height="125dip"
                    android:layout_weight="1.0"
                    android:background="@drawable/main_menu_buttons_bottom"
                    android:textStyle="bold"
                    ticket:img="@drawable/entry1"
                    ticket:title="@string/inspect_ticket_main" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
