<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/dark"
    android:fillViewport="true"
    android:padding="10dp" >

    <LinearLayout
        android:id="@+id/hghghgh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/main_menu_buttons"
            android:orientation="vertical" >

            <!-- Email Label -->

            <LinearLayout
                android:id="@+id/asd"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@drawable/main_menu_buttons_top"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1.0" >

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8"
                    android:src="@drawable/user" />

                <EditText
                    android:id="@+id/login_user"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.2"
                    android:background="@color/white1"
                    android:hint="@string/login_user_hint"
                    android:inputType="textVisiblePassword|textNoSuggestions"
                    android:paddingLeft="3dp"
                    android:singleLine="true" />
            </LinearLayout>
            <!-- Password Label -->

            <LinearLayout
                android:id="@+id/asdd"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:background="@drawable/main_menu_buttons_middle"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1.0" >

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="0.8"
                    android:src="@drawable/key" />

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dip"
                    android:layout_weight="0.2"
                    android:background="@color/white1"
                    android:hint="@string/login_pass_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="3dp"
                    android:singleLine="true" />
            </LinearLayout>
            <!-- Login button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:background="@drawable/main_menu_buttons_middle"
                android:text="@string/login_button"
                android:textColor="#000000"
                android:textSize="20sp" />

            <!-- Link to Registration Screen -->

            <TextView
                android:id="@+id/link_to_register"
                android:layout_width="fill_parent"
                android:layout_height="80dp"
                android:background="@drawable/main_menu_buttons_bottom"
                android:gravity="center"
                android:text="@string/login_register"
                android:textColor="#0b84aa"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
    <!-- Login Form Ends -->

</ScrollView>
